Added index html to web page. Added creation of weekly and monthly graphs.

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,12 @@
+Day |
+<a href="index7d.html">Week</a> |
+<a href="index30d.html">Month</a>
+
+<br/>
+<img src="temp.png">
+<br/>
 <img src="solar.png">
 <br/>
-<img src="pumps.png">
+<img src="burner.png">
 <br/>
-<img src="power.png">
-<br/>
-<img src="burner_temp.png">
+<img src="hc.png">
